--- a/app/src/main/res/layout/activity_barcode.xml
+++ b/app/src/main/res/layout/activity_barcode.xml
@@ -10,7 +10,7 @@
         android:id="@+id/surface_view"
         android:layout_width="411dp"
         android:layout_height="174dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -19,10 +19,21 @@
     <TextView
         android:id="@+id/barcode_text"
         android:layout_width="328dp"
-        android:layout_height="142dp"
-        android:layout_marginTop="36dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="8dp"
         android:padding="5dp"
         android:text="Barcode Text"
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@id/surface_view"
+        tools:layout_editor_absoluteX="41dp" />
+
+    <TextView
+        android:id="@+id/kohlenhydrate_text"
+        android:layout_width="328dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="84dp"
+        android:padding="5dp"
+        android:text="Kohlenhydrate Text"
         android:textSize="25sp"
         app:layout_constraintTop_toBottomOf="@id/surface_view"
         tools:layout_editor_absoluteX="41dp" />
