--- a/app/src/main/res/layout/activity_barcode.xml
+++ b/app/src/main/res/layout/activity_barcode.xml
@@ -38,4 +38,51 @@
         app:layout_constraintTop_toBottomOf="@id/surface_view"
         tools:layout_editor_absoluteX="41dp" />
 
+    <TextView
+        android:id="@+id/edit_be"
+        android:layout_width="328dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="240dp"
+        android:text="Broteinheiten"
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@id/surface_view"
+        tools:layout_editor_absoluteX="41dp" />
+
+    <EditText
+        android:id="@+id/edit_essen"
+        android:layout_width="328dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="160dp"
+        android:hint="Gegessene Menge in g: "
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@id/surface_view"
+        tools:layout_editor_absoluteX="41dp" />
+
+    <TextView
+        android:id="@+id/edit_insulin"
+        android:layout_width="328dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="310dp"
+        android:text="Insulin"
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@id/surface_view"
+        tools:layout_editor_absoluteX="41dp" />
+
+    <Button
+        android:id="@+id/refreshbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="384dp"
+        android:background="@drawable/buttonshape"
+        android:drawableStart="@drawable/refresh"
+        android:drawablePadding="5dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:text="Neu berechnen"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@id/surface_view"
+        tools:layout_editor_absoluteX="39dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
