--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -8,18 +8,17 @@
     tools:context=".MainActivity"
     tools:ignore="HardcodedText">
 
+    <!--EditText to take the data from the user
+        and save the data in SharedPreferences-->
+
     <TextView
         android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="Manueller Input"
         android:textColor="@android:color/black"
         android:textSize="24sp" />
-
-    <!--EditText to take the data from the user
-        and save the data in SharedPreferences-->
 
     <TextView
         android:id="@+id/textview2"
@@ -160,5 +159,14 @@
         android:layout_marginEnd="16dp"
         android:hint="Berechnete Insulineinheiten: "
         android:padding="5dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="16dp"
+        android:text="Export Data" />
 
 </RelativeLayout>
